gitops/components/envoy/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: vovsike.co.uk
  - name: vault
    port: 443
    protocol: HTTPS
    hostname: vault.vovsike.co.uk
  - name: https
    allowedRoutes:
      namespaces:
        from: All
    protocol: HTTPS
    port: 443
    hostname: vovsike.co.uk
    tls:
      certificateRefs:
        - group: ""
          kind: Secret
          name: vovsike-co-uk
